<resources>
    <string name="app_name">Simple GPS Speedometer</string>
    <string name="noPermissions_title">No permissions</string>
    <string name="noPermissions_text">The application needs access to GPS to determine the speed of GPS</string>
    <string name="noPermissions_turnOn_button">Give permissions</string>
    <string name="noPermissions_exit_button">Quit</string>

    <string name="noGPS_title">GPS turned off</string>
    <string name="noGPS_text">Turned on GPS is required to determine the speed by GPS</string>
    <string name="noGPS_turnOn_button">Turn on</string>
    <string name="noGPS_exit_button">Quit</string>
    <string name="satelliteCount">Waiting GPS...\Satellites: %d</string>
    <string name="satelliteSearch">Waiting GPS..."</string>
    <string name="speedFormat_kmh">%d km/h</string>
    <string name="menuAboutButtonTitle">Settings and information about application</string>
    <string name="medianSpeedRadioButtonTitle">Median speed by last seconds</string>
    <string name="instantSpeedRadioButtonTitle">Instant speed</string>
    <string name="speedRadioButtonGroupTitle">Speed</string>
    <string name="unitsRadioButtonGroupTitle">Units</string>
    <string name="kmhRadioButtonTitle">Km/h</string>
    <string name="mphRadioButtonTitle">Mph</string>
    <string name="otherAppsButtonTitle">Other author applications</string>
    <string name="writeFeedbackButtonTitle">Write feedback</string>
    <string name="settingsScreenTitle">Settings</string>
    <string name="goToIconAuthorSiteButtonTitle">Other author icons</string>
    <string name="author">Author: </string>
    <string name="newbilius">Moiseev Dmitry aka Newbilius</string>
    <string name="iconAuthor">Author of icon: </string>
    <string name="iconAuthorName">Visual Pharm</string>

    <plurals name="speedFormat_mph_plurals">
        <item quantity="zero">0 mph</item>
        <item quantity="one">%1$d mph</item>
        <item quantity="two">%1$d mph</item>
        <item quantity="few">%1$d mph</item>
        <item quantity="many">%1$d mph</item>
        <item quantity="other">%1$d mph</item>
    </plurals>
</resources>
