<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.newbilius.simplegpsspeedometer.SettingsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/screenPadding">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(radioGroup,id) -> model.speedCounterChanged(id)}"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/speedRadioButtonGroupTitle"
                    android:textSize="@dimen/configGroupTitleSize" />

                <RadioButton
                    android:id="@+id/instantSpeedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{model.instantSpeedCounterSelected}"
                    android:text="@string/instantSpeedRadioButtonTitle"
                    android:textSize="@dimen/textSize" />

                <RadioButton
                    android:id="@+id/medianSpeedRadioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{model.medianSpeedCounterSelected}"
                    android:text="@string/medianSpeedRadioButtonTitle"
                    android:textSize="@dimen/textSize" />
            </RadioGroup>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onCheckedChanged="@{(radioGroup,id) -> model.onSpeedFormatChanged(id)}"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/unitsRadioButtonGroupTitle"
                    android:textSize="@dimen/configGroupTitleSize" />

                <RadioButton
                    android:id="@+id/KMHradioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{model.speedInKmH}"
                    android:text="@string/kmhRadioButtonTitle"
                    android:textSize="@dimen/textSize" />

                <RadioButton
                    android:id="@+id/MPHradioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="@{model.speedInMpH}"
                    android:text="@string/mphRadioButtonTitle"
                    android:textSize="@dimen/textSize" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/newbilius"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> model.goToOtherApplications()}"
                android:text="@string/otherAppsButtonTitle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> model.writeReview()}"
                android:text="@string/writeFeedbackButtonTitle" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iconAuthor"
                    android:textSize="@dimen/textSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dp"
                    android:text="@string/iconAuthorName"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> model.goToIconAuthorSite()}"
                android:text="@string/goToIconAuthorSiteButtonTitle" />

        </LinearLayout>
    </ScrollView>
</layout>